apps/keycloak/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.int.matthewpsimons.com`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
