apps/keycloak/templates/traceroute-public-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-traceroute-public
  namespace: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.traceroutehealth.com`) && (PathPrefix(`/realms/traceroute/`) || PathPrefix(`/resources/`))
      kind: Rule
      services:
        - name: keycloak
          port: 8080
